--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
 body{
     margin: 0px;
     padding: 0px;
-    color: white;
-    background-color: rgb(25, 49, 41);
+    color: rgb(53, 60, 197);
+    /* background-color: rgb(25, 49, 41); */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     box-sizing: border-box;
@@ -10,14 +10,26 @@ body{
     
 }
 
+.header{
+    color: gold;
+    background-color: blanchedalmond;
+    text-align: center;
+}
+/* 
+#dateTime{
+    color: brown;
+    background-color: bisque;
+} */
+
 /* TITLE */
 #title{
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow:0px 0px 10px rgb(150, 179, 169);
-    background-color: rgb(25, 49, 41);
-    color: white;
+    /* background-color: rgb(25, 49, 41); */
+    /* color: white; */
+    color: coral;
     height: 60px;
     margin-top: 0px;
 
@@ -27,7 +39,7 @@ body{
 
 
 .milkProduce{
-    width: 90%;
+    width: 70%;
     margin: 0px auto;
     display: flex;
     justify-content: center;
@@ -84,7 +96,7 @@ form > button[type = "submit"]{
     margin-top: 20px;
 }
 form > button[type = "submit"], form > button[type = "reset"]{
-    background: none;
+    background: red;
     color: white;
     border: 1px solid white;
 } 
@@ -95,7 +107,7 @@ form > button[type = "submit"], form > button[type = "reset"]{
     overflow: auto;
     width: 50%;
     box-shadow:0px 0px 10px rgb(150, 179, 169);
-    background-color: rgb(25, 49, 41);
+    background-color: rgb(150, 187, 175);
     border-radius: 4px;
     font-size: 16px;
     height: 550px;
@@ -126,10 +138,4 @@ form > button[type = "submit"], form > button[type = "reset"]{
        
     }
     
-}
-#section{
-    background-image: url(assets/images/cowsmilk.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
