--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,7 +110,7 @@ form > button[type = "submit"], form > button[type = "reset"]{
     background-color: rgb(150, 187, 175);
     border-radius: 4px;
     font-size: 16px;
-    height: 550px;
+    height: 250px;
     
 }
 
@@ -138,4 +138,9 @@ form > button[type = "submit"], form > button[type = "reset"]{
        
     }
     
+}
+
+#footer{
+    text-align: center;
+    justify-content: center;
 }
