--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,10 @@ body{
     color: gold;
     background-color: blanchedalmond;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
 }
 /* 
 #dateTime{
@@ -21,7 +25,6 @@ body{
     background-color: bisque;
 } */
 
-/* TITLE */
 #title{
     display: flex;
     justify-content: center;
@@ -30,8 +33,8 @@ body{
     /* background-color: rgb(25, 49, 41); */
     /* color: white; */
     color: coral;
-    height: 60px;
-    margin-top: 0px;
+    /* height: 60px;
+    margin-top: 0px; */
 
     
     
