--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,7 @@ body{
 
 
 .milkProduce{
-    width: 70%;
+    width: 100%;
     margin: 0px auto;
     display: flex;
     justify-content: center;
@@ -113,7 +113,7 @@ form > button[type = "submit"], form > button[type = "reset"]{
     background-color: rgb(150, 187, 175);
     border-radius: 4px;
     font-size: 16px;
-    height: 250px;
+    height: 450px;
     
 }
 
@@ -146,4 +146,58 @@ form > button[type = "submit"], form > button[type = "reset"]{
 #footer{
     text-align: center;
     justify-content: center;
+}
+
+.icon:hover {
+    background-color: blue;
+} 
+
+.container {
+    background-color: green;
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.link {
+    height: 70px;
+    width: 70px;
+    background-color: #caf7e3;
+    border-radius: 35px;
+    text-align: center;
+    margin: 7px;
+    line-height: 80px;
+}
+
+a i {
+    transition: all 0.3s linear;
+}
+
+a:hover i {
+    transform: scale(1.5);
+}
+
+.youtube:hover {
+    color: red;
+}
+
+.facebook:hover {
+    color: blue;
+}
+
+.instagram:hover {
+    color: #e11d74;
+}
+
+.twitter:hover {
+    color: #00adb5;
+}
+
+.github:hover {
+    color: black;
+}
+
+.linkedin:hover {
+    color: #04009a;
 }
